Document improved char/word function

--- a/pqHelp.html
+++ b/pqHelp.html
@@ -318,7 +318,8 @@ to rebuild all metadata and make the counts accurate.</p>
 in a 7-bit file or a Latin-1 file, or to discover if the file needs
 to be saved as UTF-8.</p>
 <p>If you double-click the character glyph or value, the character 
-is copied into the Find text field and the Find panel is displayed. Do this to search for the character in the document.</p>
+is copied into the Find text field and a First search is done so the first
+use of the character is highlighted in the document. Do this to search for the character in the document.</p>
 <p>If you double-click on the Entity column, the glyph is copied to
 the Find text field while the Entity code is copied to the first
 Replace text. This makes it easy to replace a character with its Entity code.</p>
@@ -341,8 +342,7 @@ for example <tt>Aa---X</tt>. These codes contain, from left to right:
 </ul>
 Click on any column to sort on that column. Set the Respect Case
 checkbox to decide if the Word column sort is case-sensitive.</p>
-<p>Double-click a word to load that word in the Find text and display
-the Find panel.</p>
+<p>Double-click a word to copy that word into the paste buffer, load the word in the Find text, and do a First search to highlight the first use of the word in the document.</p>
 <p>
 After the text is edited the table is out of date.
 Click Refresh to rebuild all metadata
